--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     padding: 0;
     border: 0;
-    background-color: rgb(34, 34, 34);
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
